DOCS: fleshed out Readme FIX: site now renders better on mobile devices FIX: Maps now loads asynchronously FIX: improved error handling for Maps API on bad connection

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -16,7 +16,7 @@ html, body {
     min-height: 85%;
     height: calc(100% - 300px);
     max-width: 100%;
-    padding-top: 50px;
+    padding-top: 200px;
     padding-bottom: 40px;
     box-sizing: border-box;
 }
